[package]
name = "mdbook-ra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "^0.4.12"
serde_json = "^1"
anyhow = "1.0"
clap = "2.33"
semver = "1"
ide = { path = "../../rust-analyzer/crates/ide" }
vfs = { path = "../../rust-analyzer/crates/vfs" }
rust-analyzer = { path = "../../rust-analyzer/crates/rust-analyzer" }
comrak = "0.12.1"
