[package]
name = "mdbook-ra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "^0.4.12"
serde_json = "^1"
anyhow = "1.0"
clap = "2.33"
semver = "1"
ide = { version = "0.0.78", package = "ra_ap_ide" }
vfs = { version = "0.0.78", package = "ra_ap_vfs" }
rust_analyzer = { version = "0.0.78", package = "ra_ap_rust-analyzer" }
comrak = "0.12.1"
toml = "0.5.8"
